<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">网娱大师</string>
    <string name="recommend">推荐</string>
    <string name="competitive">竞技</string>
    <string name="information">资讯</string>
    <string name="red_envelope">每周红包</string>
    <string name="goldmall">金币商城</string>
    <string name="nearbynetbar">附近网吧</string>
    <string name="hotinformation">自发赛事</string>
    <string name="hotbattle">热门约战</string>
    <string name="hotmatch">热门赛事</string>
    <string name="recommend_netbar">网吧推荐</string>
    <string name="price_per_hour"><xliff:g id="NAME">%s</xliff:g>元/小时</string>
    <string name="price_per_hour_v3">￥<xliff:g id="NAME">%s</xliff:g>元/小时</string>
    <string name="type_online">线上</string>
    <string name="type_offline">线下</string>
    <string name="type_online_offline">线上/线下</string>
    <string name="login">登录</string>
    <string name="banner_extend">推广</string>
    <string name="banner_banner_intro">老婆被杀儿子被抢，男子沉迷捡破烂究竟为哪般</string>
    <string name="read">阅</string>
    <string name="topic">专题</string>
    <string name="atlas">图集</string>
    <string name="picture">图</string>
    <string name="wread">万阅</string>
    <string name="noNeteork">网络异常!</string>
    <string name="unknownException">未知异常</string>
    <string name="wan">万</string>
    <string name="yi">亿</string>
    <string name="operationFailure">操作失败</string>
    <string name="pleaseLogin">请登陆</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="load_no">已无更多数据</string>
    <string name="game_official">官方比赛</string>
    <string name="game_entertain">娱乐比赛</string>
    <string name="game_official_online">官方线上</string>
    <string name="game_official_offline">官方线下</string>
    <string name="game_netbar">网吧发起</string>
    <string name="all">全部</string>
    <string name="filter">筛选</string>
    <string name="start_time">开始时间:</string>
    <string name="match_time">比赛时间:</string>
    <string name="match_address">比赛地点:</string>
    <string name="nomore">没有更多了</string>
    <string name="filter_default">默认</string>
    <string name="game_composite">综合比赛</string>
    <string name="allenjoytype">全部参与方式</string>
    <string name="allgametype">全部游戏分类</string>
    <string name="game_lol">英雄联盟</string>
    <string name="game_dota2">DOTA2</string>
    <string name="game_stormhero">风暴英雄</string>
    <string name="game_overwatch">守望先锋</string>
    <string name="game_corssfire">穿越火线</string>
    <string name="game_bfs">炉石传说</string>
    <string name="overed">已结束</string>
    <string name="signing">报名中</string>
    <string name="enjoytype_personal">个人参与</string>
    <string name="enjoytype_team">团队参与</string>
    <string name="enjoytype">参与方式</string>
    <string name="game_state">比赛状态</string>
    <string name="battlestate_all">全部约战状态</string>
    <string name="reward_all">全部奖品类型</string>
    <string name="game_type">游戏分类</string>
    <string name="location">地理位置</string>
    <string name="game_all">全部比赛</string>
    <string name="native_city_game">当前城市比赛</string>
    <string name="native_city">当前城市</string>
    <string name="reward_dj">游戏点券</string>
    <string name="reward_other">其他奖励</string>
    <string name="reward_type">奖品类型</string>
    <string name="battle_area">约战范围</string>
    <string name="allbattle">全部约战</string>
    <string name="allonlinebattle">全部线上约战</string>
    <string name="filter_match">比赛筛选</string>
    <string name="filter_battle">约战筛选</string>
    <string name="filter_composite_match">综合比赛筛选</string>
    <string name="yuezhan_personal">个人约战</string>
    <string name="allnetbar">全部网吧</string>
    <string name="errcode_success">微信分享成功</string>
    <string name="errcode_cancel">微信分享取消</string>
    <string name="errcode_deny">微信分享被拒绝</string>
    <string name="errcode_unknown">微信分享返回</string>
    <string name="errcode_failed">微信分享失败</string>
    <string name="weibo_share_success">微博分享成功</string>
    <string name="weibo_share_cancel">微博分享取消</string>
    <string name="weibo_share_fail">微博分享失败</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="coinstask">金币任务</string>
    <string name="duihuanrecord">兑换记录</string>
    <string name="qiandao">天天签dap</string>
    <string name="coinsarea">金币专区</string>
    <string name="xiaochou">小抽怡情</string>
    <string name="AdvertiseIntroduc">金克丝皮肤5折优惠!快来买买买!</string>
    <string name="duihuandetail">兑换详情</string>
    <string name="feedback">反馈</string>
    <string name="signGetPrize">签到抽大奖</string>
    <string name="snatch">众筹夺宝</string>
    <string name="expiryArea">兑奖专区</string>
    <string name="more">更多</string>
    <string name="goldCoinNum"> %1$s金币</string>
    <string name="gameHall">游戏大厅</string>
    <string name="cdkExchange">CDK兑换</string>
    <string name="sureBtn">确定</string>
    <string name="luckyerUser">幸运用户</string>
    <string name="luckyerNum">幸运号码</string>
    <string name="participation_time">你已参与%1$s次</string>
    <string name="buySuccess">购买成功</string>
    <string name="buyFail">购买失败,请重新购买</string>
    <string name="tips">哎哟,金币不够,快去赚取金币吧!</string>
    <string name="earnBtn">赚金币</string>
    <string name="totalGoldCoins">总金币</string>
    <string name="msg_order">订单</string>
    <string name="msg_activitis">活动</string>
    <string name="msg_system">系统</string>
    <string name="msg_comment">评论</string>
    <string name="netbarInfoTitle">网吧详情</string>
    <string name="custmer_tel">037155336615</string>
    <string name="gopay">去支付</string>
    <string name="delete_order">删除</string>
    <string name="invitation_explain">通过手机号码添加队友，需要队友已下载并注册网娱大师app，在我的各人资料中完善参赛资料。</string>
    <string name="shop_detail">商品详情</string>
    <string name="expiry_rule">兑奖规则</string>
    <string name="buy_record">已购记录</string>
    <string name="instant_buy">立即购买</string>
    <string name="internetbar_info">基本信息</string>
    <string name="internetbar_activity">竞技活动</string>
    <string name="internetbar_evaluate">评价</string>
    <string name="setting">设置</string>
    <string name="exit_success">退出成功</string>
    <string name="exit_from_the_current_account">确认退出当前账号吗</string>
    <string name="please_imput_invate_code">请输入邀请码</string>
    <string name="invate_code_is_error">邀请码输入有误</string>
    <string name="whether_to_clear_the_cache">是否清除缓存?</string>
    <string name="uploadfail">上传失败</string>
    <string name="uploadfsuccess">上传成功</string>
    <string name="show">提示</string>
    <string name="on">确定</string>
    <string name="off">取消</string>
    <string name="delect_info">是否删除该条收藏</string>
    <string name="my_collect">我的收藏</string>
    <string name="appling">报名中</string>
    <string name="proceeding">进行中</string>
    <string name="overing">已结束</string>
    <string name="clear_up_unread_messages">确认清除未读消息</string>
    <string name="register">注册</string>
    <string name="findPassword">找回密码</string>
    <string-array name="register_titles">
        <item>1.输入手机号</item>
        <item>2.输入验证码</item>
        <item>3.设置密码</item>
        <item>4.完成注册</item>
    </string-array>
    <string-array name="retrieve_password">
        <item>1.输入手机号</item>
        <item>2.输入验证码</item>
        <item>3.重置密码</item>
    </string-array>
    <string name="import_phone">请输入您的手机号</string>
    <string name="phone_number">手机号:</string>
    <string name="register_agree">点击获取验证码即同意</string>
    <string name="register_pact">网娱大师客户端协议</string>
    <string name="phone_form_no">手机号码格式不对</string>
    <string name="auth_code">验证码</string>
    <string name="import_receice_auth_code">请您输入收到的验证码</string>
    <string name="auth_code_is_error">验证码过期/验证码错误</string>
    <string name="submit_auth_code">提交验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="login_code">登陆密码</string>
    <string name="import_login_code">请输入您的登陆密码</string>
    <string name="import_login_code_againe">请再次输入您的登陆密码</string>
    <string name="countersign">确认</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="alias_test">test_member_</string>
    <string name="alias">member_</string>
    <string name="tag">members</string>
    <string name="test_tag">test_members</string>
    <string name="tag_area">members_area_</string>
    <string name="test_tag_area">test_members_area_</string>
    <string name="tag_area_infomodule">members_area_info_module_</string>
    <string name="test_tag_area_infomodule">test_members_area_info_module_</string>
    <string name="tag_infomodule">members_info_module_</string>
    <string name="test_tag_infomodule">test_members_info_module_</string>
    <string name="activitys">赛事活动</string>
    <string name="netbar">网吧</string>
    <string name="user">用户</string>
    <string name="confirm_order_info">确认支付信息</string>
    <string name="red_bag">红包抵扣</string>
    <string name="price"><xliff:g id="NAME">%s</xliff:g>元</string>
    <string name="notice">注意事项：\n请您确认目标店为网娱大师合作店并在柜台当面进行支付，记得核对上网金额与实际网费哟~</string>
    <string name="verify_phone">验证您的手机</string>
    <string name="verify_notice">我们需要验证您登录的账号是否是当前使用的手机号</string>
    <string name="search_key">搜索“<xliff:g id="NAME">%s</xliff:g>”</string>
    <string name="remark_detail">备注详情</string>
    <string name="hot_comment">热门评论</string>
    <string name="newest_comment">最新评论</string>
    <string name="card_name">姓名：<xliff:g id="NAME">%s</xliff:g></string>
    <string name="card_mobile">手机号：<xliff:g id="NAME">%s</xliff:g></string>
    <string name="card_qq">QQ号：<xliff:g id="NAME">%s</xliff:g></string>
    <string name="id_card">身份证</string>
    <string name="modify_card">去修改参赛卡</string>
    <string name="no_card">您还没有个人参赛信息卡</string>
    <string name="go_add_card">快去添加，报名比赛一劳永逸</string>
    <string name="add_card">添加参赛卡</string>
    <string name="no_crops">本场比赛还没有战队报名</string>
    <string name="create_crops">去创建临时战队</string>
    <string name="captain">队长：<xliff:g id="NAME">%s</xliff:g></string>
    <string name="preheating">预热中</string>
    <string name="processing">进行中</string>
    <string name="corp_name_explain">您将是队长，临时战队创建后，您可以在我的赛事-战队中进入战队详情页面处理申请加入请求</string>
    <string name="corp_name">请输入战队名称</string>
    <string name="entry_card_that_1">您还没有个人参赛信息卡</string>
    <string name="entry_card_that_2">快去添加，报名比赛一劳永逸</string>
    <string name="has_new_version">检测到新版本</string>
    <string name="update_des">网娱大师升级到<xliff:g id="NAME">%s</xliff:g>啦</string>
    <string name="do_update">去更新</string>
    <string name="not_update">将就用用</string>
    <string name="FragmentInfoTitle">您将报名参加该场比赛</string>
    <string name="FragmentInfoCompetingInformation">确认您的参赛信息</string>
    <string name="FragmentInfoChange">修改</string>
    <string name="FragmentInfoMatchAddress1">比赛地点 :  </string>
    <string name="fragmentMatchTitle">赛事名称 :  <xliff:g id="NAME">%s</xliff:g></string>
    <string name="fragmentMatchTime">比赛时间 :  <xliff:g id="NAME">%s</xliff:g></string>
    <string name="fragmentMatchAddress">比赛地点 :  <xliff:g id="NAME">%s</xliff:g></string>
</resources>