<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/no_read">

    <include layout="@layout/layout_match_popupwindow_header"/>

    <LinearLayout
        android:id="@+id/ll_join_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/no_read"
            android:gravity="center"
            android:paddingBottom="@dimen/distance_20dp"
            android:paddingLeft="27.5dp"
            android:paddingRight="27.5dp"
            android:paddingTop="@dimen/distance_20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_gray_bg"
                android:orientation="vertical"
                android:paddingBottom="23dp"
                android:paddingLeft="13dp"
                android:paddingTop="23dp">

                <TextView
                    android:id="@+id/tv_cardname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_name"
                    android:textColor="@color/textColorBattle"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_cardmobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_mobile"
                    android:textColor="@color/textColorBattle"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_cardqq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_qq"
                    android:textColor="@color/textColorBattle"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/id_card"
                    android:textColor="@color/textColorBattle"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tv_cardId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3701**********7540"
                    android:textColor="@color/textColorBattle"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_modify_card"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/tv_modify_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_edit"
                android:drawablePadding="6dp"
                android:text="@string/modify_card"
                android:textColor="@color/orange"
                android:textSize="@dimen/text_size_14" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_orange_right" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nocard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/entry_card_that_1"
            android:textColor="@color/textColorBattle"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/entry_card_that_2"
            android:textColor="@color/textColorBattle"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_addcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_corner_orange_bg"
            android:drawableLeft="@drawable/icon_add"
            android:padding="12dp"
            android:text="@string/add_card"
            android:textColor="@color/orange" />
    </LinearLayout>

</LinearLayout>