<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="310dp"
    android:background="@drawable/shape_white_bg_corner"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/distance_20dp"
    android:paddingLeft="@dimen/distance_20dp"
    android:paddingRight="@dimen/distance_20dp">


    <TextView
        android:id="@+id/tv_update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/has_new_version"
        android:textColor="@color/colorActionBarSelected"
        android:textSize="@dimen/text_size_17"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_update_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/update_des"
        android:textColor="@color/colorActionBarSelected"
        android:textSize="@dimen/text_size_14"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_update_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:maxEms="15"
        android:minEms="15"
        android:minLines="6"
        android:textColor="@color/textColorGray"
        android:textSize="@dimen/text_size_14"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_update"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@drawable/shape_orange_bg_corner"
        android:text="@string/do_update"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/bt_not_update"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/not_update"
        android:textColor="@color/textColorGray" />


</LinearLayout>