<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="45dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/lv_item_content_text"
                android:textSize="@dimen/text_size_15" />

            <EditText
                android:id="@+id/et_phone_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:background="@null"
                android:hint="@string/import_phone"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/lv_item_content_text"
                android:textColorHint="@color/dark_gray"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="17dp"
            android:background="@color/blue_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/register_agree"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_size_11" />

            <TextView
                android:id="@+id/tv_pact_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/register_pact"
                android:textColor="@color/orange"
                android:textSize="@dimen/text_size_11" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/get_identifying_code_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_login"
        android:text="@string/get_auth_code" />

</RelativeLayout>
